added Work section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,40 @@
         <div>
             <h2>Work</h2>
         </div>
+        <div class="work-cards">
+            <article class="card">
+                <img src="./assets/images/run-buddy.jpg" alt=""/>
+                <div>
+                    <h3>Run Buddy site: HTML/CSS</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img src="./assets/images/horiseon-refactor.png" alt=""/>
+                <div>
+                    <h3>Horiseon site refactored: HTML/CSS</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img src="./assets/images/password-gen.jpg" alt=""/>
+                <div>
+                    <h3>Password generator: Javascript</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img src="./assets/images/itw.jpg" alt=""/>
+                <div>
+                    <h3>HTML/CSS</h3>
+                </div>
+            </article>
+            <article class="card">
+                <img src="./assets/images/game.jpg" alt=""/>
+                <div>
+                    <h3>First Hero-Text based RPG: C#</h3>
+                </div>
+            </article>
+        </div>
     </section>
-
+    <!--Contact section-->
     <footer id="contact-me">
         <div>
             <h2>Contact Me</h2>
