added cards to work segment and borders to segment titles

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="hero"></section>
     <!--Bio section-->
     <section id="bio">
-        <div>
-            <h2>About Me</h2>
+        <div class="flex-row">
+            <h2 class="segment-title title-border">About Me</h2>
         </div>
         <div>
             <p>This section is about me. it is a biography</p>
@@ -40,36 +40,36 @@
     </section>
     <!--Work section-->
     <section id="work">
-        <div>
-            <h2>Work</h2>
+        <div class="flex-row">
+            <h2 class="segment-title title-border">Work</h2>
         </div>
         <div class="work-cards">
             <article class="card">
-                <img src="./assets/images/run-buddy.jpg" alt=""/>
+               <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img src="./assets/images/run-buddy.jpg" alt=""/></a>
                 <div>
                     <h3>Run Buddy site: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
-                <img src="./assets/images/horiseon-refactor.png" alt=""/>
+                <a href="https://austin-espinal.github.io/horiseon-refactor/" target="blank"><img src="./assets/images/horiseon-refactor.png" alt=""/></a>
                 <div>
                     <h3>Horiseon site refactored: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
-                <img src="./assets/images/password-gen.jpg" alt=""/>
+                <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt=""/></a>
                 <div>
                     <h3>Password generator: Javascript</h3>
                 </div>
             </article>
             <article class="card">
-                <img src="./assets/images/itw.jpg" alt=""/>
+                <a href="" target="blank"><img src="./assets/images/itw.jpg" alt=""/></a>
                 <div>
-                    <h3>HTML/CSS</h3>
+                    <h3>In The Works: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
-                <img src="./assets/images/game.jpg" alt=""/>
+                <a href="" target="blank"><img src="./assets/images/game.jpg" alt=""/></a>
                 <div>
                     <h3>First Hero-Text based RPG: C#</h3>
                 </div>
@@ -78,8 +78,8 @@
     </section>
     <!--Contact section-->
     <footer id="contact-me">
-        <div>
-            <h2>Contact Me</h2>
+        <div class="flex-row">
+            <h2>Contact Me:</h2>
             <form>
                 <address>
                     Phone: <a href="tel:904.742.0730">904-742-0730</a><br />
