saving progress so far on title border

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#bio">Bio</a>
+                    <a href="#bio">About Me</a>
                 </li>
                 <li>
                     <a href="#work">Work</a>
@@ -31,19 +31,21 @@
     <section class="hero"></section>
     <!--Bio section-->
     <section id="bio">
-        <div class="flex-row">
-            <h2 class="segment-title title-border">About Me</h2>
-        </div>
-        <div>
-            <p>This section is about me. it is a biography</p>
-        </div>
+        <article class="bio-segment">
+            <div class="flex-row">
+                <h2 class="bio-title">About Me</h2>
+            </div>
+            <div>
+                <p>This section is about me. it is a biography sdhdsdshsdhdfdsfdsdf</p>
+            </div>
+        </article>
     </section>
     <!--Work section-->
     <section id="work">
-        <div class="flex-row">
-            <h2 class="segment-title title-border">Work</h2>
-        </div>
         <div class="work-cards">
+            <div class="flex-row">
+                <h2 class="work-title">Work</h2>
+            </div>
             <article class="card">
                <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img src="./assets/images/run-buddy.jpg" alt=""/></a>
                 <div>
