--- a/index.html
+++ b/index.html
@@ -33,49 +33,49 @@
     <section id="bio">
         <article class="bio-segment">
             <div class="flex-row">
-                <h2 class="bio-title">About Me</h2>
+                <h2 class="bio-title primary-border">About Me</h2>
             </div>
-            <div>
-                <p>This section is about me. it is a biography sdhdsdshsdhdfdsfdsdf</p>
+            <div class="bio-text">
+                <p>Lorem ipsum, </p>
             </div>
         </article>
     </section>
     <!--Work section-->
-    <section id="work">
+    <section id="work" class="work-segment">
+        <div class="flex-row">
+            <h2 class="work-title primary-border">Work</h2>
+        </div>
         <div class="work-cards">
-            <div class="flex-row">
-                <h2 class="work-title">Work</h2>
-            </div>
-            <article class="card">
-               <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img src="./assets/images/run-buddy.jpg" alt=""/></a>
-                <div>
-                    <h3>Run Buddy site: HTML/CSS</h3>
-                </div>
-            </article>
-            <article class="card">
-                <a href="https://austin-espinal.github.io/horiseon-refactor/" target="blank"><img src="./assets/images/horiseon-refactor.png" alt=""/></a>
-                <div>
-                    <h3>Horiseon site refactored: HTML/CSS</h3>
-                </div>
-            </article>
-            <article class="card">
-                <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt=""/></a>
-                <div>
-                    <h3>Password generator: Javascript</h3>
-                </div>
-            </article>
-            <article class="card">
-                <a href="" target="blank"><img src="./assets/images/itw.jpg" alt=""/></a>
-                <div>
-                    <h3>In The Works: HTML/CSS</h3>
-                </div>
-            </article>
-            <article class="card">
-                <a href="" target="blank"><img src="./assets/images/game.jpg" alt=""/></a>
-                <div>
-                    <h3>First Hero-Text based RPG: C#</h3>
-                </div>
-            </article>
+            <article class="card first-card">
+                <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img src="./assets/images/run-buddy.jpg" alt=""/></a>
+                 <div>
+                     <h3>Run Buddy site: HTML/CSS</h3>
+                 </div>
+             </article>
+             <article class="card">
+                 <a href="https://austin-espinal.github.io/horiseon-refactor/" target="blank"><img src="./assets/images/horiseon-refactor.png" alt=""/></a>
+                 <div>
+                     <h3>Horiseon site refactored: HTML/CSS</h3>
+                 </div>
+             </article>
+             <article class="card">
+                 <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt=""/></a>
+                 <div>
+                     <h3>Password generator: Javascript</h3>
+                 </div>
+             </article>
+             <article class="card">
+                 <a href="" target="blank"><img src="./assets/images/itw.jpg" alt=""/></a>
+                 <div>
+                     <h3>In The Works: HTML/CSS</h3>
+                 </div>
+             </article>
+             <article class="card">
+                 <a href="" target="blank"><img src="./assets/images/game.jpg" alt=""/></a>
+                 <div>
+                     <h3>First Hero-Text based RPG: C#</h3>
+                 </div>
+             </article>
         </div>
     </section>
     <!--Contact section-->
