card resizing finalized and moved contact address to the end of the footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin's Portfolio</title>
 </head>
+
 <body>
     <!--Navigation-->
     <header>
@@ -46,50 +48,53 @@
             <h2 class="work-title primary-border">Work</h2>
         </div>
         <div class="work-cards">
-            <article class="card first-card">
-                <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img src="./assets/images/run-buddy.jpg" alt=""/></a>
-                 <div>
-                     <h3>Run Buddy site: HTML/CSS</h3>
-                 </div>
-             </article>
-             <article class="card">
-                 <a href="https://austin-espinal.github.io/horiseon-refactor/" target="blank"><img src="./assets/images/horiseon-refactor.png" alt=""/></a>
-                 <div>
-                     <h3>Horiseon site refactored: HTML/CSS</h3>
-                 </div>
-             </article>
-             <article class="card">
-                 <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt=""/></a>
-                 <div>
-                     <h3>Password generator: Javascript</h3>
-                 </div>
-             </article>
-             <article class="card">
-                 <a href="" target="blank"><img src="./assets/images/itw.jpg" alt=""/></a>
-                 <div>
-                     <h3>In The Works: HTML/CSS</h3>
-                 </div>
-             </article>
-             <article class="card">
-                 <a href="" target="blank"><img src="./assets/images/game.jpg" alt=""/></a>
-                 <div>
-                     <h3>First Hero-Text based RPG: C#</h3>
-                 </div>
-             </article>
+            <article class="first-card">
+                <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img
+                        src="./assets/images/run-buddy.jpg" alt="" /></a>
+                <div>
+                    <h3>Run Buddy site: HTML/CSS</h3>
+                </div>
+            </article>
+            <article class="card">
+                <a href="https://austin-espinal.github.io/horiseon-refactor/" target="blank"><img
+                        src="./assets/images/horiseon-refactor.png" alt="" /></a>
+                <div>
+                    <h3>Horiseon site refactored: HTML/CSS</h3>
+                </div>
+            </article>
+            <article class="card">
+                <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt="" /></a>
+                <div>
+                    <h3>Password generator: Javascript</h3>
+                </div>
+            </article>
+            <article class="card">
+                <a href="" target="blank"><img src="./assets/images/itw.jpg" alt="" /></a>
+                <div>
+                    <h3>In The Works: HTML/CSS</h3>
+                </div>
+            </article>
+            <article class="card">
+                <a href="" target="blank"><img src="./assets/images/game.jpg" alt="" /></a>
+                <div>
+                    <h3>First Hero-Text based RPG: C#</h3>
+                </div>
+            </article>
         </div>
     </section>
     <!--Contact section-->
     <footer id="contact-me">
         <div class="flex-row">
             <h2>Contact Me:</h2>
-            <form>
-                <address>
-                    Phone: <a href="tel:904.742.0730">904-742-0730</a><br />
-                    Email: <a href="mailto:austinespi@gmail.com">austinespi@gmail.com</a><br />
-                    Github: <a href="github.com/austin-espinal">@austin-espinal</a>
-                </address>
-            </form>
         </div>
+        <form>
+            <address>
+                Phone: <a href="tel:904.742.0730">904-742-0730</a><br />
+                Email: <a href="mailto:austinespi@gmail.com">austinespi@gmail.com</a><br />
+                Github: <a href="github.com/austin-espinal">@austin-espinal</a>
+            </address>
+        </form>
     </footer>
 </body>
+
 </html>
