added text and image to About Me section. Also added media query skeleton

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin's Portfolio</title>
+    <title>Austin Espinal's Portfolio</title>
 </head>
 
 <body>
@@ -24,21 +24,30 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact</a>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="">Resume</a>
                 </li>
             </ul>
         </nav>
     </header>
     <!--Hero section-->
     <section class="hero"></section>
-    <!--Bio section-->
+    <!--About Me section-->
     <section id="bio">
         <article class="bio-segment">
             <div class="flex-row">
                 <h2 class="bio-title primary-border">About Me</h2>
             </div>
             <div class="bio-text">
-                <p>Lorem ipsum, </p>
+                <p>Hello my name is Austin Espinal and welcome to my portfolio! I am full-stack developer in training. So far, I have experience with HTML and CSS. Currently, I am learning Javascript and will be adding it to my arsenal of Front-end developer tools.<br />
+                    There will be a lot more that I will learn so please look forward to checking out my portfolio over time and watch it grow.<br /> 
+                    Phone and email are the best ways to reach me. I hope you enjoy the rest of your day and I hope to hear back from you. When I am not coding, you can find me playing videogames, watching basketball, browsing Netflix, or making cocktails on the weekends. I would say I like long walks on the beach but I rather go swimming instead. 
+                </p>
+            </div>
+            <div>
+                <img src="./assets/images/me.jpg" alt="A face picture of Austin Espinal" />
             </div>
         </article>
     </section>
@@ -63,21 +72,24 @@
                 </div>
             </article>
             <article class="card">
+                <!--Future project. will add when complete-->
                 <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt="" /></a>
                 <div>
                     <h3>Password generator: Javascript</h3>
                 </div>
             </article>
             <article class="card">
+                <!--Placeholder project 1-->
                 <a href="" target="blank"><img src="./assets/images/itw.jpg" alt="" /></a>
                 <div>
                     <h3>In The Works: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
+                <!--Placeholder project 2-->
                 <a href="" target="blank"><img src="./assets/images/game.jpg" alt="" /></a>
                 <div>
-                    <h3>First Hero-Text based RPG: C#</h3>
+                    <h3>First Hero-Text based RPG: Javascript</h3>
                 </div>
             </article>
         </div>
