made all smaller images uniform size  and started media queries

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="bio">
         <article class="bio-segment">
             <div class="flex-row">
-                <h2 class="bio-title primary-border">About Me</h2>
+                <h2 class="title primary-border">About Me</h2>
             </div>
             <div class="bio-text">
                 <p>Hello my name is Austin Espinal and welcome to my portfolio! I am full-stack developer in training. So far, I have experience with HTML and CSS. Currently, I am learning Javascript and will be adding it to my arsenal of Front-end developer tools.<br />
@@ -54,7 +54,7 @@
     <!--Work section-->
     <section id="work" class="work-segment">
         <div class="flex-row">
-            <h2 class="work-title primary-border">Work</h2>
+            <h2 class="title primary-border">Work</h2>
         </div>
         <div class="work-cards">
             <article class="first-card">
