finished adding remaining media queries and content spacings. added hover effects

--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
         </nav>
     </header>
     <!--Hero section-->
-    <section class="hero"></section>
+    <section class="hero">
+        <h2>Welcome</h2>
+    </section>
     <!--About Me section-->
     <section id="bio">
         <article class="bio-segment">
             <div class="flex-row">
-                <h2 class="title primary-border">About Me</h2>
+                <h2 class="title">About Me</h2>
             </div>
             <div class="bio-text">
                 <p>Hello my name is Austin Espinal and welcome to my portfolio! I am full-stack developer in training. So far, I have experience with HTML and CSS. Currently, I am learning Javascript and will be adding it to my arsenal of Front-end developer tools.<br />
-                    There will be a lot more that I will learn so please look forward to checking out my portfolio over time and watch it grow.<br /> 
-                    Phone and email are the best ways to reach me. I hope you enjoy the rest of your day and I hope to hear back from you. When I am not coding, you can find me playing videogames, watching basketball, browsing Netflix, or making cocktails on the weekends. I would say I like long walks on the beach but I rather go swimming instead. 
+                    There will be a lot more that I will learn so please look forward to checking out my portfolio over time and watch it grow. When I am not coding, you can find me playing videogames, watching basketball, browsing Netflix, or making cocktails on the weekends.
+                    Phone and email are the best ways to reach me. I hope you enjoy the rest of your day and I hope to hear back from you. 
                 </p>
             </div>
             <div>
@@ -54,40 +56,40 @@
     <!--Work section-->
     <section id="work" class="work-segment">
         <div class="flex-row">
-            <h2 class="title primary-border">Work</h2>
+            <h2 class="title">Work</h2>
         </div>
         <div class="work-cards">
             <article class="first-card">
                 <a href="https://austin-espinal.github.io/run-buddy/" target="blank"><img
-                        src="./assets/images/run-buddy.jpg" alt="" /></a>
+                        src="./assets/images/run-buddy.jpg" alt="Screenshot of the Run Buddy site. image of a woman tying her running shoes. Clicking on image takes you to the Run Buddy website." /></a>
                 <div>
                     <h3>Run Buddy site: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
                 <a href="https://austin-espinal.github.io/horiseon-refactor/" target="blank"><img
-                        src="./assets/images/horiseon-refactor.png" alt="" /></a>
+                        src="./assets/images/horiseon-refactor.png" alt="Screenshot of the Horiseon site. Image of a group of people in a meeting. Clicking on image takes you to the Horiseon website." /></a>
                 <div>
                     <h3>Horiseon site refactored: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
                 <!--Future project. will add when complete-->
-                <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt="" /></a>
+                <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt="Image of a Password input box. Clicking on image takes you to the Password Generator." /></a>
                 <div>
                     <h3>Password generator: Javascript</h3>
                 </div>
             </article>
             <article class="card">
                 <!--Placeholder project 1-->
-                <a href="" target="blank"><img src="./assets/images/itw.jpg" alt="" /></a>
+                <a href="" target="blank"><img src="./assets/images/itw.jpg" alt="Image of a red hardhat in a construction site. Clicking on image takes you to the In The Works website." /></a>
                 <div>
                     <h3>In The Works: HTML/CSS</h3>
                 </div>
             </article>
             <article class="card">
                 <!--Placeholder project 2-->
-                <a href="" target="blank"><img src="./assets/images/game.jpg" alt="" /></a>
+                <a href="" target="blank"><img src="./assets/images/game.jpg" alt="Image of a man holding a Playstation 4 controller. Clicking on image takes you to the First Hero-Text based RPG." /></a>
                 <div>
                     <h3>First Hero-Text based RPG: Javascript</h3>
                 </div>
@@ -101,7 +103,7 @@
         </div>
         <form>
             <address>
-                Phone: <a href="tel:904.742.0730">904-742-0730</a><br />
+                Phone: <a href="tel:904.456.8899">904-456-8899</a><br />
                 Email: <a href="mailto:austinespi@gmail.com">austinespi@gmail.com</a><br />
                 Github: <a href="github.com/austin-espinal">@austin-espinal</a>
             </address>
