added description, website link, and site screenshot to READ.md

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="bio-text">
                 <p>Hello my name is Austin Espinal and welcome to my portfolio! I am full-stack developer in training. So far, I have experience with HTML and CSS. Currently, I am learning Javascript and will be adding it to my arsenal of Front-end developer tools.<br />
                     There will be a lot more that I will learn so please look forward to checking out my portfolio over time and watch it grow. When I am not coding, you can find me playing videogames, watching basketball, browsing Netflix, or making cocktails on the weekends.
-                    Phone and email are the best ways to reach me. I hope you enjoy the rest of your day and I hope to hear back from you. 
+                    Email is the best way to reach me. I hope you enjoy the rest of your day and I hope to hear back from you. 
                 </p>
             </div>
             <div>
@@ -103,6 +103,7 @@
         </div>
         <form>
             <address>
+                <!--Not my real phone number in order to avoid scam calls-->
                 Phone: <a href="tel:904.456.8899">904-456-8899</a><br />
                 Email: <a href="mailto:austinespi@gmail.com">austinespi@gmail.com</a><br />
                 Github: <a href="github.com/austin-espinal">@austin-espinal</a>
