add links to project 1 and password gen. updated project 1 image

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
             </article>
             <article class="card">
                 <!--Future project. will add when complete-->
-                <a href="" target="blank"><img src="./assets/images/password-gen.jpg" alt="Image of a Password input box. Clicking on image takes you to the Password Generator." /></a>
+                <a href=" https://austin-espinal.github.io/employee-password-gen/" target="blank"><img src="./assets/images/password-gen.jpg" alt="Image of a Password input box. Clicking on image takes you to the Password Generator." /></a>
                 <div>
                     <h3>Password generator: Javascript</h3>
                 </div>
             </article>
             <article class="card">
-                <!--Placeholder project 1-->
-                <a href="" target="blank"><img src="./assets/images/itw.jpg" alt="Image of a red hardhat in a construction site. Clicking on image takes you to the In The Works website." /></a>
+                <!--project 1-->
+                <a href="https://ellacodes2021.github.io/Team-Indecisive-IDK/" target="blank"><img src="./assets/images/concierge.png" alt="Image of a service bell on a desk. Clicking on image takes you to the Concierge website." /></a>
                 <div>
-                    <h3>In The Works: HTML/CSS</h3>
+                    <h3>Concierge: HTML/CSS/Javascript</h3>
                 </div>
             </article>
             <article class="card">
