--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 </div>
             </article>
             <article class="card">
-                <!--Placeholder project 2-->
-                <a href="" target="blank"><img src="./assets/images/game.jpg" alt="Image of a man holding a Playstation 4 controller. Clicking on image takes you to the First Hero-Text based RPG." /></a>
+                <!--project 2-->
+                <a href="https://not-into-gram.herokuapp.com/" target="blank"><img src="./assets/images/not-inta-gram.png" alt="Image of Not-Inta-Gram website. Shows two mountain pictures with like and dislike buttons" /></a>
                 <div>
-                    <h3>First Hero-Text based RPG: Javascript</h3>
+                    <h3>Not Inta Gram: HTML/CSS/Javascript/Node/MySQL</h3>
                 </div>
             </article>
         </div>
